Updates regarding item overview.

--- a/grails-app/assets/stylesheets/application.css
+++ b/grails-app/assets/stylesheets/application.css
@@ -240,3 +240,12 @@ div.divider {
 .selection-item.active {
     border-color: rgb(49, 59, 75) !important;
 }
+
+/*
+ * Shadowed containers
+ */
+.shadow-box-container {
+    -webkit-box-shadow: 10px 10px 5px -8px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px -8px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 5px -8px rgba(0,0,0,0.75);
+}
