--- a/grails-app/assets/stylesheets/application.css
+++ b/grails-app/assets/stylesheets/application.css
@@ -249,3 +249,11 @@ div.divider {
     -moz-box-shadow: 10px 10px 5px -8px rgba(0,0,0,0.75);
     box-shadow: 10px 10px 5px -8px rgba(0,0,0,0.75);
 }
+
+.bottom-shadow-header {
+    margin-bottom: 20px;
+
+    -webkit-box-shadow: 0px 7px 10px -10px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 7px 10px -10px rgba(0,0,0,0.75);
+    box-shadow: 0px 7px 10px -10px rgba(0,0,0,0.75);
+}
